# PongbotQ

./: CMakeLists.txt  README.md  package.xml
MODELS/PONGBOT_LEG/: CMakeLists.txt  model.config  model.sdf  package.xml
MODELS/PONGBOT_Q_V1/: CMakeLists.txt  model.config  model.sdf  package.xml
MODELS/PONGBOT_Q_V2/: model.sdf
MODELS/PONGBOT_Q_V3(old_ver)/: model.config  model.sdf  package.xml
MODELS/PONGBOT_Q_V4/: CMakeLists.txt  model (copy).sdf  model.sdf
MODELS/PONGBOT_Q_V4_HS/: model.sdf
MODELS/PONGBOT_Q_V6/: model.sdf
MODELS/SLAVE_ARM/: CMakeLists.txt  model.config  model.sdf  package.xml
MODELS/SLAVE_ARM2/: CMakeLists.txt  model.config  model.sdf  package.xml
MODELS/SLOPE_GENERATOR2/: CMakeLists.txt  model.config  model.sdf  package.xml
MODELS/STEP_TYPE2/: manifest.xml  model.config  model.sdf
MODELS/STEP_TYPE3/: manifest.xml  model.config  model.sdf
MODELS/Segway_Roboticslab_v2H/: CMakeLists.txt  model (copy).config  model.sdf  package.xml
MODELS/segway_KHS/: CMakeLists.txt  model (copy).sdf  model.config  model.sdf  package.xml
MODELS/segway_hsk/: CMakeLists.txt  model (copy).sdf  model.config  model.sdf  package.xml
MODELS/slope_way/: manifest.xml  model.config  model.sdf
MODELS/step/: CMakeLists.txt  model.config  model.sdf  package.xml
MODELS/step_type1/: manifest.xml  model.config  model.sdf
PONGBOT_Q_V1/: model.sdf
PONGBOT_Q_V1/config/: joint_names_PONGBOT_Q_V1.yaml
PONGBOT_Q_V1/launch/: display.launch  gazebo.launch
PONGBOT_Q_V1/meshes/: FL_ROTATOR1.STL  FL_ROTATOR2.STL  FL_THIGH.STL  FR_ROTATOR1.STL  FR_ROTATOR2.STL  FR_THIGH.STL  RL_ROTATOR1.STL  RL_ROTATOR3.STL  RR_ROTATOR2.STL  RR_THIGH.STL
PONGBOT_Q_V1/urdf/: PONGBOT_Q_V1.gv  (+1 more)
PONGBOT_Q_V2/: model (3rd copy).sdf  model.sdf
launch/: pongbot_q_v1.launch
pongbot_rviz/: CMakeLists.txt  model.config  package.xml  urdf.rviz
src/: CRobot.cpp  CRobot.h  plugin.cc  pongbotq_plugin.cc
worlds/: pongbot_q_v1.world
(+185 files in other folders)
